# NFD2Rust

./: .gitignore  Cargo.toml  README.md
lib/: nfd2rust.rs
lib/evaluator/: builtins.rs  environment.rs  mod.rs  object.rs  packet.rs
lib/lexer/: mod.rs  token.rs
lib/parser/: ast.rs  mod.rs
models/: l3-lb.txt  stateless_firewall.txt
src/: cmd.rs  main.rs  parser.rs
